--- a/EN.html
+++ b/EN.html
@@ -24,12 +24,23 @@
       <div class="container-fluid">
 
         <div class="text">
-            <p class="h2"> For any activation need <br> <br>
-            1- Miracle Box crack 3.25 - <span class="text-primary">Price : 40$</span> <br> 2- Mrt crack 3.95 - <span class="text-primary">Price : 30$</span>  <br>3- Miracle Frp - <span class="text-primary">Price : 25$</span></p>       
-        </div>
-         <div class="text2">
-             <h4> Please contact us on <a href="https://wa.me/+237693206091">WhatsApp</a> or <a href="https://t.me/Thehardvester">Telegram</a></h4>
-         </div>
+          <p class="h2">Miracle Crack 3.25 :: MRT Crack 3.95 :: Miracle Frp crack 2.00 <br> Available. <br> <br>
+            <div class="text-center">
+              <img src="miracle.PNG" class="rounded img-fluid" alt="...">
+            </div><br>
+          <span class="Edit">1- Miracle Box crack 3.25 -<span class="text-primary">Prix : 40$</span></span> <br>
+          <div class="text-center">
+            <img src="MRT V3.65 Crack By GSM-X-TEAM (1).png" class="rounded img-fluid" alt="...">
+          </div>
+          <br> <span class="Edit">2- Mrt crack 3.95 - <span class="text-primary">Prix : 30$</span></span><br>
+          <div class="text-center">
+            <img src="frp miracle.png" class="rounded img-fluid" alt="...">
+          </div>
+          <span class="Edit" style="text-align: center;">3- Miracle Frp - <span class="text-primary">Prix : 25$</span></p></span>       
+      </div>
+       <div class="text2">
+           <h4>Veuillez nous contacter sur <a href="https://wa.me/+237693206091">WhatsApp</a> ou <a href="https://t.me/Thehardvester">Telegram</a></h4>
+       </div>
 
          <div class="icon">
               <a href="https://t.me/Thehardvester"><img src="telegram.svg" alt="Contact Us - telegram" width="40"></a>
@@ -39,7 +50,7 @@
          </div>
 
          <div class="En">
-             <a href="" class="fw-bold"> <img src="france.svg" alt="" width="30"> Français</a>
+             <a href="index.html" class="fw-bold"> <img src="france.svg" alt="" width="30"> Français</a>
          </div>
                <br><br><br><br><br><br>
 
