--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
       <div class="container-fluid">
 
         <div class="text">
-            <p class="h2">Pour tout besoin d'activation <br> <br>
-            1- Miracle Box crack 3.25 - <span class="text-primary">Prix : 40$</span> <br> 2- Mrt crack 3.95 - <span class="text-primary">Prix : 30$</span>  <br>3- Miracle Frp - <span class="text-primary">Prix : 25$</span></p>       
+            <p class="h2">Miracle Crack 3.25 :: MRT Crack 3.95 :: Miracle Frp <br> disponible. <br> <br>
+              <div class="text-center">
+                <img src="miracle.PNG" class="rounded img-fluid" alt="...">
+              </div><br>
+            <span class="Edit">1- Miracle Box crack 3.25 -<span class="text-primary">Prix : 40$</span></span> <br>
+            <div class="text-center">
+              <img src="MRT V3.65 Crack By GSM-X-TEAM (1).png" class="rounded img-fluid" alt="...">
+            </div>
+            <br> <span class="Edit">2- Mrt crack 3.95 - <span class="text-primary">Prix : 30$</span></span><br>
+            <div class="text-center">
+              <img src="frp miracle.png" class="rounded img-fluid" alt="...">
+            </div>
+            <span class="Edit" style="text-align: center;">3- Miracle Frp - <span class="text-primary">Prix : 25$</span></p></span>       
         </div>
          <div class="text2">
              <h4>Veuillez nous contacter sur <a href="https://wa.me/+237693206091">WhatsApp</a> ou <a href="https://t.me/Thehardvester">Telegram</a></h4>
