--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container-fluid">
 
         <div class="text">
-            <p class="h2">Miracle Crack 3.25 :: MRT Crack 3.95 :: Miracle Frp <br> disponible. <br> <br>
+            <p class="h2">Miracle Crack 3.25 :: MRT Crack 3.95 :: Miracle Frp crack 2.00 <br> disponible. <br> <br>
               <div class="text-center">
                 <img src="miracle.PNG" class="rounded img-fluid" alt="...">
               </div><br>
