--- a/EN.html
+++ b/EN.html
@@ -13,13 +13,15 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="logo1.png" alt="" width="180" height="40" class="d-inline-block align-text-top">
-          </a>
-        </div>
-      </nav>
+    
+
+  <nav class="navbar navbar-light bg-light" style="position: fixed; width: 100%; z-index: 9999;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="logo1.png" alt="" width="160" height="30" class="d-inline-block align-text-top">
+      </a>
+    </div>
+  </nav>
 
       <div class="container-fluid">
 
