--- a/EN.html
+++ b/EN.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-light bg-light" style="position: fixed; width: 100%; z-index: 9999;">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="logo1.png" alt="" width="160" height="30" class="d-inline-block align-text-top">
+        <img src="./01Maga logo Black.png" alt="" width="" height="70" class="d-inline-block align-text-top">
       </a>
     </div>
   </nav>
@@ -26,19 +26,16 @@
       <div class="container-fluid">
 
         <div class="text">
-          <p class="h2">Miracle Crack 3.25 :: MRT Crack 3.95 :: Miracle Frp crack 2.00 <br> Available. <br> <br>
+          <p class="h2">Miracle Crack 3.40 <br> Miracle Frp crack 2.00 <br> Available. <br> <br>
             <div class="text-center">
               <img src="miracle.PNG" class="rounded img-fluid" alt="...">
             </div><br>
-          <span class="Edit">1- Miracle Box crack 3.25 -<span class="text-primary">Prix : 40$</span></span> <br>
-          <div class="text-center">
-            <img src="MRT V3.65 Crack By GSM-X-TEAM (1).png" class="rounded img-fluid" alt="...">
-          </div>
-          <br> <span class="Edit">2- Mrt crack 3.95 - <span class="text-primary">Prix : 30$</span></span><br>
+          <span class="Edit">1- Miracle Box crack 3.25 -<span class="text-primary">Prix : 40$</span>
+          <br>
           <div class="text-center">
             <img src="frp miracle.png" class="rounded img-fluid" alt="...">
           </div>
-          <span class="Edit" style="text-align: center;">3- Miracle Frp - <span class="text-primary">Prix : 25$</span></p></span>       
+          <span class="Edit" style="text-align: center;">3- Miracle Frp - <span class="text-primary">Prix : 25$</span>       
       </div>
        <div class="text2">
            <h4>Veuillez nous contacter sur <a href="https://wa.me/+237693206091">WhatsApp</a> ou <a href="https://t.me/Thehardvester">Telegram</a></h4>
@@ -58,7 +55,7 @@
 
 
         <footer class="bg-light" style="height: 90px;">
-            <p>Copyright &copy; <span class="footer-span"></span>, All Right Reserved <a href="https://www.youtube.com/channel/UCaswW0W47tckWlAB0P1XgIQ/videos">The Hardvester Officiel</a></p>
+            <p>Copyright &copy; <span class="footer-span"></span>, All Right Reserved <a href="https://www.youtube.com/channel/UCaswW0W47tckWlAB0P1XgIQ/videos">01maga</a></p>
         </footer>
       </div>
     <!-- JavaScript Bundle with Popper -->
