--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         
 <figure class="max-w-lg">
-  <img class="h-auto max-w-full rounded-lg" src="/1695400932449.jpg" alt="image description">
+  <img class="h-auto max-w-full rounded-lg" src="1695400932449.jpg" alt="image description">
   <figcaption class="mt-2 text-sm text-center text-gray-500 dark:text-gray-400">Paiement unique & Mises à jours gratuites</figcaption>
 </figure>
 <br><br>
@@ -57,7 +57,7 @@
 <p class="mb-3 text-gray-500 dark:text-gray-400">Vous êtes un technicien GSM spécialisé dans le HARDWARE ? cette solution est pour vous. <br> Borneo Schematics est logiciel regroupant toutes les dernières solutions Hardware mobile. <br> Il est fait pour vous !. </p>
 <br>
 <figure class="max-w-lg">
-  <img class="h-auto max-w-full rounded-lg" src="/1695400914633.jpg" alt="image description">
+  <img class="h-auto max-w-full rounded-lg" src="1695400914633.jpg" alt="image description">
   <figcaption class="mt-2 text-sm text-center text-gray-500 dark:text-gray-400">Borneo Shematics - Premium crack</figcaption>
 </figure>
 
